Fix responsiveness of cards on small screen

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,7 +11,6 @@ h1 {
 
 h2,
 h3 {
-    /* font-size: 30px; */
     font-weight: 700;
     margin: 20px auto;
 }
@@ -75,10 +74,6 @@ nav {
 
 .row {
     margin: 20px auto;
-}
-
-.col {
-    margin: 20px 0;
 }
 
 .card-space {
@@ -228,18 +223,20 @@ footer {
 }
 
 
-/* for medium screen sizes from 1000px and below */
-@media screen and (max-width: 1000px) {
-    nav {
-        position: fixed;
-        width: 100vw;
-        z-index: 1;
+/* for medium screen sizes from 750px and below */
+@media screen and (max-width: 775px) {
+    .card-body{
+        width: 60%;
+        margin: auto auto;
+    }
+
+    .image-container {
+        margin: 20px 0;
     }
 }
 
-@media screen and (max-width: 750px) {
-    .image-container {
-        margin: 20px 0;
-        height: auto;
+@media screen and (max-width: 510px) {
+    .card-body{
+        width: auto;
     }
 }
